--- a/app/src/main/res/layout/rec_view_item_categories.xml
+++ b/app/src/main/res/layout/rec_view_item_categories.xml
@@ -2,63 +2,68 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_marginVertical="2dp"
-    android:background="@color/rec_view_transactions"
     android:id="@+id/recView_item_categories"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="2dp"
+    android:background="@color/rec_view_transactions">
 
         <TextView
             android:id="@+id/textView_category_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="Rentas"
             android:ellipsize="end"
             android:maxLines="1"
+            android:text="Rentas"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/boundary"
             app:layout_constraintStart_toEndOf="@+id/imageButton_category_icon"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp" />
+            app:layout_constraintTop_toTopOf="@+id/imageButton_category_icon" />
 
         <TextView
             android:id="@+id/imageButton_category_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="⚙️"
-            android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="⚙️"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_edit_category"
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@color/rec_view_transactions"
+            android:contentDescription="@string/edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_edit_gray"
-            android:contentDescription="@string/edit" />
+            app:srcCompat="@drawable/ic_edit_gray" />
 
         <LinearLayout
+            android:id="@+id/boundary"
             android:layout_width="4dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:id="@+id/boundary"
             android:background="@color/dark_grey"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_edit_category"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView_category_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="@+id/textView_category_name"
+            app:layout_constraintTop_toBottomOf="@+id/textView_category_name" />
 
 
         <!--     <com.google.android.material.switchmaterial.SwitchMaterial
